feat: raise minimum Java version to 11 and apply OpenRewrite best practices (#3397)
Signed-off-by: Marvin Froeder <velo.br@gmail.com>